k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tv
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: tv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:18
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: tv
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-live
  namespace: tv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin-live
  template:
    metadata:
      labels:
        app: jellyfin-live
    spec:
      containers:
        - name: jellyfin-live
          image: ghcr.io/willuhmjs/jellyfin-live:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-live
  namespace: tv
spec:
  type: ClusterIP
  selector:
    app: jellyfin-live
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-live-ingress
  namespace: tv
spec:
  rules:
    - host: live.will.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-live
                port:
                  number: 80
